build: install necessary dependencies for gradlew to execute